# pisa-iit-soft-hand

./: .gitignore  .gitmodules  README.md  ros_dependencies.txt
examples/adaptive_example/launch/: adaptive.launch
examples/full_actuated_example/config/: joint_names.yaml  soft_hand_full_control.yaml
examples/full_actuated_example/launch/: full_actuation.launch
examples/sensorised_example/: CMakeLists.txt  package.xml
examples/sensorised_example/config/: joint_names.yaml
examples/sensorised_example/launch/: display.launch  sensorised.launch
examples/sensorised_example/robot/: soft_hand_full_actuation.urdf.xacro
gazebo_ros_soft_hand/: CMakeLists.txt
gazebo_ros_soft_hand/src/: default_soft_hand_hw_sim.cpp  kinematic_ctrl_soft_hand_hw_sim.cpp
soft_hand/: package.xml
soft_hand_description/model/: soft_hand.transmission.xacro
soft_hand_ros_control/: CMakeLists.txt
soft_hand_ros_control/launch/: soft_hand_sensorised_hw.launch
soft_hand_ros_control/src/: soft_hand_hw_sensorised.cpp
