<?xml version="1.0"?>
<package>
  <name>sensorised_example</name>
  <version>0.0.0</version>
  <description>The sensorised_example package</description>

  <maintainer email="exa371@bham.ac.uk">Ermano Arruda</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>